--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>analytic-showcase-port</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Portfolio</title>
+    <meta name="description" content="Progress" />
+    <meta name="author" content="Irfan Basha" />
 
-    <meta property="og:title" content="analytic-showcase-port" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Portfolio" />
+    <meta property="og:description" content="Progress" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <!-- <meta name="twitter:site" content="@lovable_dev" /> -->
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
